[package]
name = "beacon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = "0.1.14"
# serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
# futures = { version = "0.3", default-features = false }
# uuid = { version = "1.1.2", features = ["serde", "v4"] }
octocrab = "0.23.0"
anyhow = "1.0.71"
openssl = { version = "0.10.52" }
aws-sdk-lambda = "0.28.0"
aws-config = "0.55.3"
futures = "0.3.28"
